correccion rutas nav

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 
 <div class="nav">
 
-
      <nav>
      <ul class="paginas">
         <li class="menu">
@@ -47,10 +46,10 @@
 
         </li>
         <li><a class="paginas" href="#">HOME</a></li>
-        <li><a class="paginas" href="./Pages/ofertas.html">OFERTAS</a></li>
-         <li><a class="paginas" href="./Pages/calendario.html">CALENDARIO</a></li>
-         <li><a class="paginas" href="./Pages/nosotros.html">NOSOTROS</a></li>
-        <li><a class="paginas" href="./Pages/contacto.html">CONTACTO</a></li>
+        <li><a class="paginas" href="./pages/ofertas.html">OFERTAS</a></li>
+         <li><a class="paginas" href="./pages/calendario.html">CALENDARIO</a></li>
+         <li><a class="paginas" href="./pages/nosotros.html">NOSOTROS</a></li>
+        <li><a class="paginas" href="./pages/contacto.html">CONTACTO</a></li>
       </ul>
       </nav>
 
