detalles de estilos en mq mobile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="header">
         <header>
-            <img src="./assets/logo.png" alt="logo-campoyasociados" >
+            <img src="./assets/logo.png" alt="logo-campoyasociados" class="header-logo">
          <label for="Buscar">Buscar</label>
             <input class="buscar" type="search">
         <input class="fav" type="image" src="./assets/FAVORITOS.png">
@@ -165,7 +165,7 @@
 
 </footer>
 
-   <div class=""> <p>campoyasociados SA</p> </div>
+   <div class="sa"> <p>campoyasociados SA</p> </div>
     </div>
   </body>
 </html>
