--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
 
     <div class="header">
         <header>
-            <img src="../assets/logo.jpg" alt="logo-campoyasociados" >
+            <img src="../assets/logo.jpg" alt="logo-campoyasociados" class="header-logo" >
          <label for="Buscar">Buscar</label>
             <input class="buscar" type="search">
         <input class="fav" type="image" src="../assets/FAVORITOS.png">
@@ -112,37 +112,37 @@
    
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  
+
 <footer class="footer">
-    <section>
     <div class="footer-nav">
-    <h5>NAVEGACION</h5>
-   <nav>
-    <ul class="footer-nav_items">
-        
-        <li> <a href="index.html">home</a></li>
-        <li> <a href="categorias.html">Categorias</a> </li>
-        <li> <a href="contacto.html">Contacto</a></li>
-        <li> <a href="comocomprar">Como comprar</a></li>
-        <li> <a href="preguntas frecuentes">Preguntas frecuentes</a></li>
-    </ul>
-    </nav>
+        <h5>NAVEGACION</h5>
+        <nav>
+            <ul class="footer-nav_items">
+                <li> <a href="#">Home</a></li>
+                <li> <a href="../Pages/">Categorias</a> </li>
+                <li> <a href="../Pages/contacto.html">Contacto</a></li>
+                <li> <a href="comocomprar">Como comprar</a></li>
+                <li> <a href="preguntas frecuentes">Preguntas frecuentes</a></li>
+            </ul>
+        </nav>
     </div>
 
-   <div class="redes">
+    <div class="redes">
+        <h5>SEGUINOS EN NUESTRAS REDES SOCIALES</h5>
 
-   </section>
-    <h5>SEGUINOS EN NUESTRAS REDES SOCIALES</h5>
-    <div class="redes-item"><a target="_blank" href="https://www.instagram.com/campoyasociadoslincoln/">Instagram</a></div>
-    <a target="_blank" href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web#">facebook</a></div>
-    </section>
-    </div> 
+        <div class="redes-item">
 
-    <p>campoyasociados SA</p>
+          <div><a href="https://www.instagram.com/campoyasociadoslincoln/" target="_blank">Instagram</a>
+        </div>
 
-    </footer>
-
-
+        <div>
+          <a href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#">Facebook</a>
     </div>
-</body>
+
+
+</footer>
+
+   <div class="sa"> <p>campoyasociados SA</p> </div>
+    </div>
+  </body>
 </html>
