--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -1,102 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-     <link rel="stylesheet" href="../css/styles.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-   <title>CALENDARIO</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <title>CALENDARIO</title>
 </head>
 
 <body>
-<div class="grid-container">
+  <div class="grid-container">
 
     <div class="top-header">
-        <p class="theader-item" style="flex-grow: 4;">¡Bienvenido/a a tu veterinaria online!</p>
-        <button class="iniciar" style="flex-grow: 1;">Iniciar Sesion</button>
-        <button class="registro" style="flex-grow: 1;">Registrarse</button>
+      <p class="theader-item" style="flex-grow: 4;">¡Bienvenido/a a tu veterinaria online!</p>
+      <button class="iniciar" style="flex-grow: 1;">Iniciar Sesion</button>
+      <button class="registro" style="flex-grow: 1;">Registrarse</button>
     </div>
 
     <div class="header">
-        <header>
-            <img src="../assets/logo.jpg" alt="logo-campoyasociados" class="header-logo" >
-         <label for="Buscar">Buscar</label>
-            <input class="buscar" type="search">
+      <header>
+        <img src="../assets/logo.jpg" alt="logo-campoyasociados" class="header-logo">
+        <label for="Buscar">Buscar</label>
+        <input class="buscar" type="search">
         <input class="fav" type="image" src="../assets/FAVORITOS.png">
         <input class="carro" type="image" src="../assets/Captura de Pantalla 2025-09-22 a la(s) 15.09.00.png">
-        </header> <!--cuando el cursor toca las imagenes de vaca aparece un texto - FAVORITOS y CARRITO-->
+      </header> <!--cuando el cursor toca las imagenes de vaca aparece un texto - FAVORITOS y CARRITO-->
     </div>
 
-<div class="nav">
+     <div class="nav">
 
-
-     <nav>
-     <ul class="paginas">
-        <li class="menu"><div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    CATEGORIAS
-  </button>
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">Productos veterinarios</a></li>
-    <li><a class="dropdown-item" href="#">Insumos Agropecuarios</a></li>
-    <li><a class="dropdown-item" href="#">Indumentaria agricola</a></li>
-  </ul>
-</div> </li>
-        <li><a class="paginas" href="../index.html">HOME</a></li>
-        <li><a class="paginas" href="./ofertas.html">OFERTAS</a></li>
-         <li><a class="paginas" href="#">CALENDARIO</a></li>
-         <li><a class="paginas" href="./nosotros.html">NOSOTROS</a></li>
-        <li><a class="paginas" href="./contacto.html">CONTACTO</a></li>
-      </ul>
-      </nav>
-
-<main class="main">
-
-<h1>CALENDARIO DE SANIDAD VACUNO</h1>
-<H5 class="titulo-cal">Te asesoramos para que tu rodeo esté al día</H5>
-
-<div class="imagen-cal">
-
-
-<img class="img-cal" src="../assets/SANIDAD EN VACAS.jpg" alt="calendario">
-</div>
-
-</main>
-
-      
-   
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  
-<footer class="footer">
-    <div class="footer-nav">
-        <h5>NAVEGACION</h5>
         <nav>
-            <ul class="footer-nav_items">
-                <li> <a href="#">Home</a></li>
-                <li> <a href="../Pages/">Categorias</a> </li>
-                <li> <a href="../Pages/contacto.html">Contacto</a></li>
-                <li> <a href="comocomprar">Como comprar</a></li>
-                <li> <a href="preguntas frecuentes">Preguntas frecuentes</a></li>
-            </ul>
+          <ul class="paginas">
+            <li class="menu">
+
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  CATEGORIAS
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Productos veterinarios</a></li>
+                  <li><a class="dropdown-item" href="#">Insumos Agropecuarios</a></li>
+                  <li><a class="dropdown-item" href="#">Indumentaria agricola</a></li>
+                </ul>
+              </div>
+            </li>
+
+            <div class="pag-menu">
+
+              <li><a class="paginas" href="../index.html">HOME</a></li>
+              <li><a class="paginas" href="./pages/ofertas.html">OFERTAS</a></li>
+              <li><a class="paginas" href="#">CALENDARIO</a></li>
+              <li><a class="paginas" href="./pages/nosotros.html">NOSOTROS</a></li>
+              <li><a class="paginas" href="./pages/contacto.html">CONTACTO</a></li>
+            </div>
+          </ul>
         </nav>
-    </div>
 
-    <div class="redes">
-        <h5>SEGUINOS EN NUESTRAS REDES SOCIALES</h5>
+      </div>
 
-        <div class="redes-item">
+      <!-- nav para mobile unicamente -->
+      <div class="nav-mobile">
+        <div class="btn-group">
+          <button type="button" class="btn btn-secondary"><img src="./assets/icono mnu.png" alt=""></button>
+          <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <span class="visually-hidden">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="../index.html">Home</a></li>
+            <li><a class="dropdown-item" href="./pages/ofertas.html">Ofertas</a></li>
+            <li><a class="dropdown-item" href="#">Calendario</a></li>
+            <li><a class="dropdown-item" href="./pages/nosotros.html">Nosotros</a></li>
+            <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Categorias</a></li>
+          </ul>
+        </div>
+      </div>
 
-          <div><a href="https://www.instagram.com/campoyasociadoslincoln/" target="_blank">Instagram</a>
+      <main class="main">
+
+        <h1>CALENDARIO DE SANIDAD VACUNO</h1>
+        <H5 class="titulo-cal">Te asesoramos para que tu rodeo esté al día</H5>
+
+        <div class="imagen-cal">
+
+
+          <img class="img-cal" src="../assets/SANIDAD EN VACAS.jpg" alt="calendario">
         </div>
 
-        <div>
-          <a href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#">Facebook</a>
+      </main>
+
+
+
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
+
+      <footer class="footer">
+        <div class="footer-nav">
+          <h5>NAVEGACION</h5>
+          <nav>
+            <ul class="footer-nav_items">
+              <li> <a href="#">Home</a></li>
+              <li> <a href="../Pages/">Categorias</a> </li>
+              <li> <a href="../Pages/contacto.html">Contacto</a></li>
+              <li> <a href="comocomprar">Como comprar</a></li>
+              <li> <a href="preguntas frecuentes">Preguntas frecuentes</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="redes">
+          <h5>SEGUINOS EN NUESTRAS REDES SOCIALES</h5>
+
+          <div class="redes-item">
+
+            <div><a href="https://www.instagram.com/campoyasociadoslincoln/" target="_blank">Instagram</a>
+            </div>
+
+            <div>
+              <a
+                href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#">Facebook</a>
+            </div>
+
+
+      </footer>
+
+      <div class="sa">
+        <p>campoyasociados SA</p>
+      </div>
     </div>
+</body>
 
-
-</footer>
-
-   <div class="sa"> <p>campoyasociados SA</p> </div>
-    </div>
-  </body>
 </html>
