--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,9 +50,9 @@
             <div class="pag-menu">
 
               <li><a class="paginas" href="../index.html">HOME</a></li>
-              <li><a class="paginas" href="./pages/ofertas.html">OFERTAS</a></li>
-              <li><a class="paginas" href="./pages/calendario.html">CALENDARIO</a></li>
-              <li><a class="paginas" href="./pages/nosotros.html">NOSOTROS</a></li>
+              <li><a class="paginas" href="./ofertas.html">OFERTAS</a></li>
+              <li><a class="paginas" href="./calendario.html">CALENDARIO</a></li>
+              <li><a class="paginas" href="./nosotros.html">NOSOTROS</a></li>
               <li><a class="paginas" href="#">CONTACTO</a></li>
             </div>
           </ul>
@@ -70,9 +70,9 @@
           </button>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="../index.html">Home</a></li>
-            <li><a class="dropdown-item" href="./pages/ofertas.html">Ofertas</a></li>
-            <li><a class="dropdown-item" href="./pages/calendario.html">Calendario</a></li>
-            <li><a class="dropdown-item" href="./pages/nosotros.html">Nosotros</a></li>
+            <li><a class="dropdown-item" href="./ofertas.html">Ofertas</a></li>
+            <li><a class="dropdown-item" href="./calendario.html">Calendario</a></li>
+            <li><a class="dropdown-item" href="./nosotros.html">Nosotros</a></li>
             <li><a class="dropdown-item" href="#">Contacto</a></li>
             <li>
               <hr class="dropdown-divider">
