--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -50,10 +50,10 @@
             <div class="pag-menu">
 
               <li><a class="paginas" href="../index.html">HOME</a></li>
-              <li><a class="paginas" href="./pages/ofertas.html">OFERTAS</a></li>
-              <li><a class="paginas" href="./pages/calendario.html">CALENDARIO</a></li>
+              <li><a class="paginas" href="./ofertas.html">OFERTAS</a></li>
+              <li><a class="paginas" href="./calendario.html">CALENDARIO</a></li>
               <li><a class="paginas" href="#">NOSOTROS</a></li>
-              <li><a class="paginas" href="./pages/contacto.html">CONTACTO</a></li>
+              <li><a class="paginas" href="./contacto.html">CONTACTO</a></li>
             </div>
           </ul>
         </nav>
@@ -70,10 +70,10 @@
           </button>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="../index.html">Home</a></li>
-            <li><a class="dropdown-item" href="./pages/ofertas.html">Ofertas</a></li>
-            <li><a class="dropdown-item" href="./pages/calendario.html">Calendario</a></li>
+            <li><a class="dropdown-item" href="./ofertas.html">Ofertas</a></li>
+            <li><a class="dropdown-item" href="./calendario.html">Calendario</a></li>
             <li><a class="dropdown-item" href="#">Nosotros</a></li>
-            <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
+            <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
