--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -51,9 +51,9 @@
 
               <li><a class="paginas" href="../index.html">HOME</a></li>
               <li><a class="paginas" href="#">OFERTAS</a></li>
-              <li><a class="paginas" href="./pages/calendario.html">CALENDARIO</a></li>
-              <li><a class="paginas" href="./pages/nosotros.html">NOSOTROS</a></li>
-              <li><a class="paginas" href="./pages/contacto.html">CONTACTO</a></li>
+              <li><a class="paginas" href="./calendario.html">CALENDARIO</a></li>
+              <li><a class="paginas" href="./nosotros.html">NOSOTROS</a></li>
+              <li><a class="paginas" href="./contacto.html">CONTACTO</a></li>
             </div>
           </ul>
         </nav>
@@ -71,9 +71,9 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="../index.html">Home</a></li>
             <li><a class="dropdown-item" href="#">Ofertas</a></li>
-            <li><a class="dropdown-item" href="./pages/calendario.html">Calendario</a></li>
-            <li><a class="dropdown-item" href="./pages/nosotros.html">Nosotros</a></li>
-            <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
+            <li><a class="dropdown-item" href="./calendario.html">Calendario</a></li>
+            <li><a class="dropdown-item" href="./nosotros.html">Nosotros</a></li>
+            <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
