correciones para la entrega final

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Tu veterinaria online en Lincoln y alrededores: todo lo que necesitas para que tu campo sea cada dia mas productivo.">
   <link rel="stylesheet" href="./css/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <title>Campo&Asociados</title>
+  <title>CampoyAsociados-Lincoln</title>
 </head>
 
 <body>
@@ -87,7 +88,7 @@
       <h1>COMPRÁ DESDE TU CASA</h1>
 
       <div class="fotos-portada">
-        <img src="./assets/Banner-2 (1).png" alt="vacas">;
+        <img src="./assets/Banner-2 (1).png" alt="foto-vacas">;
 
 
 
@@ -101,7 +102,7 @@
 
 
           <section>
-            <h4>PRODUCTOS DESTACADOS</h4>
+            <h2>PRODUCTOS DESTACADOS</h2>
 
             <div class="cards">
               <div class="card" style="width: 18rem;">
@@ -125,7 +126,7 @@
 
                 <div class="cards">
                   <div class="card" style="width: 18rem;">
-                    <img src="./assets/PRODUCTO3.jpg" class="card-img-top" alt="Moscalier">
+                    <img src="./assets/PRODUCTO3.jpg" class="card-img-top" alt="botas-calfor">
                     <div class="card-body">
                       <h5 class="card-title">Botas CALFOR</h5>
                       <p class="card-text">RESISTENTES
@@ -173,10 +174,10 @@
             <nav>
               <ul class="footer-nav_items">
                 <li> <a href="#">Home</a></li>
-                <li> <a href="../pages/">Categorias</a> </li>
-                <li> <a href="../pages/contacto.html">Contacto</a></li>
-                <li> <a href="comocomprar">Como comprar</a></li>
-                <li> <a href="preguntas frecuentes">Preguntas frecuentes</a></li>
+                <li> <a href="./pages/nosotros.html">Nosotros</a></li>
+                <li> <a href="./pages/contacto.html">Contacto</a></li>
+                <li> <a href="./pages/calendario.html">Calendario</a></li>
+                <li> <a href="./pages/ofertas.html">Ofertas</a></li>
               </ul>
             </nav>
           </div>
