--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,10 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Tu veterinaria online en Linocoln. Ofrecemos asesoramiento profesional 24hs, los mejores productos veterinarios y herramientas de trabajo para que tu campo sea siempre productivo">
   <link rel="stylesheet" href="../css/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <title>CONTACTO</title>
+  <title>CONTACTO-CyA-Lincoln</title>
 </head>
 
 <body>
@@ -63,7 +65,7 @@
       <!-- nav para mobile unicamente -->
       <div class="nav-mobile">
         <div class="btn-group">
-          <button type="button" class="btn btn-secondary"><img src="./assets/icono mnu.png" alt=""></button>
+          <button type="button" class="btn btn-secondary"><img src="./assets/icono mnu.png" alt="menu"></button>
           <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
             data-bs-toggle="dropdown" aria-expanded="false">
             <span class="visually-hidden">Toggle Dropdown</span>
@@ -155,13 +157,13 @@
     <div class="footer-nav">
       <h5>NAVEGACION</h5>
       <nav>
-        <ul class="footer-nav_items">
-          <li> <a href="#">Home</a></li>
-          <li> <a href="../Pages/">Categorias</a> </li>
-          <li> <a href="../Pages/contacto.html">Contacto</a></li>
-          <li> <a href="comocomprar">Como comprar</a></li>
-          <li> <a href="preguntas frecuentes">Preguntas frecuentes</a></li>
-        </ul>
+               <ul class="footer-nav_items">
+                <li> <a href="../index.html">Home</a></li>
+                <li> <a href="./nosotros.html">Nosotros</a></li>
+                <li> <a href="#">Contacto</a></li>
+                <li> <a href="./calendario.html">Calendario</a></li>
+                <li> <a href="./ofertas.html">Ofertas</a></li>
+              </ul>
       </nav>
     </div>
 
