correciones de jerarquia de h

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <!-- nav para mobile unicamente -->
       <div class="nav-mobile">
         <div class="btn-group">
-          <button type="button" class="btn btn-secondary"><img src="./assets/icono mnu.png" alt=""></button>
+          <button type="button" class="btn btn-secondary"><img src="./assets/icono mnu.png" alt="menu"></button>
           <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
             data-bs-toggle="dropdown" aria-expanded="false">
             <span class="visually-hidden">Toggle Dropdown</span>
@@ -138,7 +138,7 @@
           </section>
 
           <section>
-            <h4>NUESTROS PROVEEDORES</h4>
+            <h2>NUESTROS PROVEEDORES</h2>
             <div class="img-prov">
               <div class="prov"><img src="./assets/acindar.png" alt="logo acindar"></div>
               <div class="prov"><img src="./assets/biogenesis.jpeg" alt="logo biogenesis"> </div>
@@ -152,7 +152,7 @@
         <div class="pre-footer">
           <section>
             <h3>¡Enterate antes que nadie!</h3>
-            <h5>Suscribite para recibir nuestras ofertas</h5>
+            <h4>Suscribite para recibir nuestras ofertas</h4>
 
             <form>
               <label for="email-usuario">Correo Electrónico:</label>
