--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -65,7 +65,7 @@
       <!-- nav para mobile unicamente -->
       <div class="nav-mobile">
         <div class="btn-group">
-          <button type="button" class="btn btn-secondary"><img src="./assets/icono mnu.png" alt="menu"></button>
+          <button type="button" class="btn btn-secondary"><img src="../assets/icono mnu.png" alt="menu"></button>
           <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
             data-bs-toggle="dropdown" aria-expanded="false">
             <span class="visually-hidden">Toggle Dropdown</span>
@@ -138,8 +138,8 @@
 
   <div class="pre-footer">
     <section>
-      <h3>¡Enterate antes que nadie!</h3>
-      <h5>Suscribite para recibir nuestras ofertas</h5>
+      <h2>¡Enterate antes que nadie!</h2>
+      <h3 class="h3-cal">Suscribite para recibir nuestras ofertas</h3>
       <input type="email" name="email" id="email">
       <button> Enviar</button>
       <!-- ver como ponerle logo de sobre y "tu direccion de mail"-->
@@ -168,7 +168,7 @@
     </div>
 
     <div class="redes">
-      <h5>SEGUINOS EN NUESTRAS REDES SOCIALES</h5>
+      <h4 class="h3-cal">SEGUINOS EN NUESTRAS REDES SOCIALES</h4>
 
       <div class="redes-item">
 
