--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -65,7 +65,7 @@
       <!-- nav para mobile unicamente -->
       <div class="nav-mobile">
         <div class="btn-group">
-          <button type="button" class="btn btn-secondary"><img src="./assets/icono mnu.png" alt="menu"></button>
+          <button type="button" class="btn btn-secondary"><img src="../assets/icono mnu.png" alt="menu"></button>
           <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
             data-bs-toggle="dropdown" aria-expanded="false">
             <span class="visually-hidden">Toggle Dropdown</span>
@@ -119,8 +119,8 @@
 
   <div class="pre-footer">
     <section>
-      <h3>¡Enterate antes que nadie!</h3>
-      <h5>Suscribite para recibir nuestras ofertas</h5>
+      <h2>¡Enterate antes que nadie!</h2>
+      <h3>Suscribite para recibir nuestras ofertas</h3>
       <input type="email" name="email" id="email">
       <button> Enviar</button>
       <!-- ver como ponerle logo de sobre y "tu direccion de mail"-->
@@ -136,7 +136,7 @@
 
   <footer class="footer">
     <div class="footer-nav">
-      <h5>NAVEGACION</h5>
+      <h4>NAVEGACION</h4>
       <nav>
         <ul class="footer-nav_items">
                 <li> <a href="../index.html">Home</a></li>
