--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -65,7 +65,7 @@
       <!-- nav para mobile unicamente -->
       <div class="nav-mobile">
         <div class="btn-group">
-          <button type="button" class="btn btn-secondary"><img src="./assets/icono mnu.png" alt="menu"></button>
+          <button type="button" class="btn btn-secondary"><img src="../assets/icono mnu.png" alt="menu"></button>
           <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
             data-bs-toggle="dropdown" aria-expanded="false">
             <span class="visually-hidden">Toggle Dropdown</span>
@@ -87,7 +87,7 @@
       <main class="main">
 
         <h1>CALENDARIO DE SANIDAD VACUNO</h1>
-        <H5 class="titulo-cal">Te asesoramos para que tu rodeo esté al día</H5>
+        <h2 class="titulo-cal">Te asesoramos para que tu rodeo esté al día</h2>
 
         <div class="imagen-cal">
 
@@ -119,7 +119,7 @@
         </div>
 
         <div class="redes">
-          <h5>SEGUINOS EN NUESTRAS REDES SOCIALES</h5>
+          <h3 class="h3-cal">SEGUINOS EN NUESTRAS REDES SOCIALES</h3>
 
           <div class="redes-item">
 
