--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -65,7 +65,7 @@
       <!-- nav para mobile unicamente -->
       <div class="nav-mobile">
         <div class="btn-group">
-          <button type="button" class="btn btn-secondary"><img src="./assets/icono mnu.png" alt="menu"></button>
+          <button type="button" class="btn btn-secondary"><img src="../assets/icono mnu.png" alt="menu"></button>
           <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
             data-bs-toggle="dropdown" aria-expanded="false">
             <span class="visually-hidden">Toggle Dropdown</span>
@@ -107,7 +107,7 @@
               <div class="imagen-cal">
 
 
-                <img class="img-cal" src="../assets/amigos.jpg" alt="amigos">
+                <img class="img-cal" src="../assets/amigos.jpg" alt="foto-socios">
               </div>
             </div>
       </main>
@@ -117,7 +117,7 @@
         crossorigin="anonymous"></script>
       <footer class="footer">
         <div class="footer-nav">
-          <h5>NAVEGACION</h5>
+          <h2 class="h3-cal">NAVEGACION</h2>
           <nav>
                     <ul class="footer-nav_items">
                 <li> <a href="../index.html">Home</a></li>
@@ -130,7 +130,7 @@
         </div>
 
         <div class="redes">
-          <h5>SEGUINOS EN NUESTRAS REDES SOCIALES</h5>
+          <h3 class="h3-cal">SEGUINOS EN NUESTRAS REDES SOCIALES</h3>
 
           <div class="redes-item">
 
@@ -145,9 +145,7 @@
 
       </footer>
 
-      <div class="sa">
-        <p>campoyasociados SA</p>
-      </div>
+
     </div>
 </body>
 
