nesting y pseudo clases, cambio colores de bootstrap

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Insecticida Externo</h5>
                   <p class="card-text">200 dosis aplicadas con spray</p>
-                  <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                  <a href="#" class="btn-color">Agregar al carrito</a>
                 </div>
               </div>
 
@@ -120,7 +120,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Antiparasitario Externo</h5>
                     <p class="card-text">De doble aplicación</p>
-                    <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                    <a href="#" class="btn-color">Agregar al carrito</a>
                   </div>
                 </div>
 
@@ -131,7 +131,7 @@
                       <h5 class="card-title">Botas CALFOR</h5>
                       <p class="card-text">RESISTENTES
                         Talles 38 - 44</p>
-                      <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                      <a href="#" class="btn-color">Agregar al carrito</a>
                     </div>
                   </div>
 
@@ -192,7 +192,7 @@
 
               <div>
                 <a
-                  href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#">Facebook</a>
+                  href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#" target="_blank">Facebook</a>
               </div>
 
 
