--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -128,15 +128,13 @@
 
             <div>
               <a
-                href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#">Facebook</a>
+                href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#" target="_blank">Facebook</a>
             </div>
 
 
       </footer>
 
-      <div class="sa">
-        <p>campoyasociados SA</p>
-      </div>
+     
     </div>
 </body>
 
