--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -96,7 +96,7 @@
             <div class="card-body">
               <h5 class="card-title">Asegurate la preñez</h5>
               <p class="card-text">La forma mas confiable de asegurar el futuro de tu rodeo. Incluye aplicador.</p>
-              <a href="#" class="btn btn-primary">Agregar al carrito</a>
+              <a href="#" class="btn-color">Agregar al carrito</a>
             </div>
           </div>
 
@@ -106,7 +106,7 @@
               <div class="card-body">
                 <h5 class="card-title">Olvidate del empaste</h5>
                 <p class="card-text">Con BLOKER el Alfalfa no es un problema. Sales para 300 vacas.</p>
-                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                <a href="#" class="btn-color">Agregar al carrito</a>
               </div>
             </div>
           </div>
@@ -157,7 +157,7 @@
         </div>
 
         <div>
-          <a href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#">Facebook</a>
+          <a href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#" target="_blank">Facebook</a>
         </div>
 
 
