--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -176,7 +176,7 @@
         </div>
 
         <div>
-          <a href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#">Facebook</a>
+          <a href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#" target="_blank">Facebook</a>
         </div>
 
 
