--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -139,13 +139,13 @@
 
             <div>
               <a
-                href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#">Facebook</a>
+                href="https://www.facebook.com/profile.php?id=61559191771885&ref=_xav_ig_profile_page_web_bt#" target="_blank">Facebook</a>
             </div>
 
 
       </footer>
 
-
+   
     </div>
 </body>
 
